force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <label>Issue Tracker</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>