force-app/main/default/objects/Issue__c/fields/Analysis_Submitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Submitted_Date_Time__c</fullName>
    <label>Analysis Submitted Date</label>
    <type>Date</type>
</CustomField>