force-app/main/default/objects/Issue__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <displayFormat>I{0000}</displayFormat>
    <label>Issue</label>
    <type>AutoNumber</type>
</CustomField>