force-app/main/default/objects/Issue__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>100</length>
    <type>Text</type>
</CustomField>