force-app/main/default/objects/Issue__c/fields/Primary_Resource__c.field-meta.xml
<CustomField>
    <fullName>Primary_Resource__c</fullName>
    <label>Primary Resource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payal Bedare Stetig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>