force-app/main/default/objects/Issue__c/fields/Prioritized_Date__c.field-meta.xml
<CustomField>
    <fullName>Prioritized_Date__c</fullName>
    <label>Prioritized Date</label>
    <type>Date</type>
</CustomField>