force-app/main/default/objects/Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Under Analysis</fullName>
            </value>
            <value>
                <fullName>Analysis Done &amp; Submitted</fullName>
            </value>
            <value>
                <fullName>Go-ahead start of dev</fullName>
            </value>
            <value>
                <fullName>Under Development</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Go-ahead migration to prod</fullName>
            </value>
            <value>
                <fullName>ReOpen</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>