force-app/main/default/objects/Issue__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <label>Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales App</fullName>
            </value>
            <value>
                <fullName>Customer Community</fullName>
            </value>
            <value>
                <fullName>Partner Community</fullName>
            </value>
            <value>
                <fullName>API Integration</fullName>
            </value>
            <value>
                <fullName>Payment Gateway</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>