force-app/main/default/objects/Issue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Clarification</fullName>
            </value>
            <value>
                <fullName>Data Activity</fullName>
            </value>
            <value>
                <fullName>New Module</fullName>
            </value>
            <value>
                <fullName>New Requirement</fullName>
            </value>
            <value>
                <fullName>Program Configuration</fullName>
            </value>
            <value>
                <fullName>Reports and Dashboards</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>