force-app/main/default/objects/Issue__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Issue__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Raised_By__c</columns>
    <columns>Module__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>