force-app/main/default/objects/Issue__c/listViews/Awaiting_Response.listView-meta.xml
<ListView>
    <fullName>Awaiting_Response</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Module__c</columns>
    <columns>Raised_By__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Response</value>
    </filters>
    <label>Awaiting Response</label>
</ListView>