force-app/main/default/objects/Issue__c/listViews/Closed_Issue.listView-meta.xml
<ListView>
    <fullName>Closed_Issue</fullName>
    <columns>NAME</columns>
    <columns>Module__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Raised_By__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Issue</label>
</ListView>