force-app/main/default/objects/Issue__c/listViews/Issue_Tracker.listView-meta.xml
<ListView>
    <fullName>Issue_Tracker</fullName>
    <columns>NAME</columns>
    <columns>Module__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Raised_By__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Issue</label>
</ListView>