force-app/main/default/objects/Issue__c/listViews/Priority.listView-meta.xml
<ListView>
    <fullName>Priority</fullName>
    <columns>NAME</columns>
    <columns>Module__c</columns>
    <columns>Raised_By__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>L1</value>
    </filters>
    <label>Priority</label>
</ListView>