force-app/main/default/objects/Issue__c/listViews/UAT.listView-meta.xml
<ListView>
    <fullName>UAT</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Closed_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>UAT</value>
    </filters>
    <label>UAT</label>
</ListView>